Fixed spacing for filter button

--- a/src/Components/Notifications/index.css
+++ b/src/Components/Notifications/index.css
@@ -12,7 +12,7 @@
     display: flex;
     padding: 0;
     align-items: baseline;
-    padding: 0 0 0 13em;
+    justify-content: flex-end;
 }
 
 .page-heading {
@@ -65,7 +65,7 @@
     font-weight: 400;
     font-size: 24px;
     line-height: 33px;
-    
+
 }
 
 .notification-read {
